# pytest-tcpclient

./: .gitignore  CHANGELOG.rst  DEV_README.rst  DEV_SETUP.rst  GITHUB_README_TEMPLATE.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.rst.tmp  dev_dependencies.txt  dev_requirements.txt  old_dev_dependencies.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: README.rst
build_scripts/: add_version_tag  init_venv  run_tests.sh
docs/: conf.py  index.rst
examples/: test_early_error_doesnt_hang_test.py  test_example_3.py  test_exception_in_test.py  test_expect_bytes_connection_closed.py  test_expect_bytes_success.py  test_expect_bytes_times_out.py  test_expect_connect.py  test_expect_connect_minimal.py  test_expect_disconnect_close_not_called.py  test_expect_disconnect_no_connection.py  test_expect_disconnect_wait_closed_not_called.py  test_expect_frame_success.py  test_expect_frame_times_out.py  test_expect_frame_wrong_bytes_sent.py  test_hello.py  test_hello_world.py  test_readexactly_incomplete.py  test_readline.py  test_send_frame_success.py  test_sent_data_not_read.py  test_server_disconnect.py  test_tcpserver_factory_success.py  test_tcpserver_factory_two_servers_fail.py
new_examples/: test_connection_reset_error.py  test_delayed_join.py  test_expect_bytes_success.py  test_expect_bytes_times_out.py  test_expect_bytes_wrong_bytes_sent.py  test_expect_connect_is_absent.py  test_expect_connect_passes_1.py  test_expect_connect_passes_2.py  test_expect_connect_times_out.py  test_expect_disconnect_receives_unexpected_bytes.py  test_expect_disconnect_times_out.py  test_ordering_error.py  test_readexactly.py  test_readuntil.py  test_second_connection_causes_failure.py  test_send_bytes.py  test_sent_frame_not_read.py  (+2 more)
scripts/: init_venv  run_tests.sh
(+14 files in other folders)
